Closed Bug 1162524 Opened 9 years ago Closed 9 years ago

Fix connect/accept in |UnixSocketWatcher|

Categories

(Firefox OS Graveyard :: General, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox40 fixed)

RESOLVED FIXED
2.2 S12 (15may)
Tracking Status
firefox40 --- fixed

People

(Reporter: tzimmermann, Assigned: tzimmermann)

References

Details

Attachments

(2 files)

The |Connect| method in |UnixSocketWatcher| incorrectly returns an error if it takes longer on a non-blocking socket. That is not an error.

Accepting connection requests should be moved out of |UnixSocketWatcher|. This will allow for more flexibility.
Attachment #8602760 - Flags: review?(kyle) → review+
Attachment #8602761 - Flags: review?(kyle) → review+
https://hg.mozilla.org/mozilla-central/rev/7f7d734605b1
https://hg.mozilla.org/mozilla-central/rev/a099b6c77366
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → 2.2 S12 (15may)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: