Bug 1162524: Fix error handling |UnixSocketWatcher::Connect|, r=kmachulis

With this patch, it's not an error if the connection operations
stalls on a non-blocking socket; so don't return an error code.

The patch also makes |connect| restart if it was aborted by a
signal.